# scrubr

./: .gitignore  Cargo.toml  README.md  build.rs  fetch_push_git
src/: color.rs  css.rs  gradient.rs  groups.rs  ids.rs  main.rs  optimizer.rs  path.rs  path_simplify.rs  style_block.rs  subst.rs  transform.rs
