[package]
name = "scrubr"
version = "0.1.1"
edition = "2024"
description = "The Rust SVG scrubber — optimizer/cleaner with substitution variable support"
license = "Apache-2.0"
authors = ["shunte88"]

[[bin]]
name = "scrubr"
path = "src/main.rs"

[dependencies]
# XML parsing — zero-copy, safe
roxmltree = "0.20"
clap = { version = "4", features = ["derive"] }
flate2 = "1"
chrono = "0.4.41"

[build-dependencies]
chrono = "0.4.41"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
