[package]
name = "scrubr"
version = "0.1.2"
edition = "2024"
description = "The Rust SVG scrubber — optimizer/cleaner with substitution variable support"
license = "Apache-2.0"
authors = ["shunte88"]

[[bin]]
name = "scrubr"
path = "src/main.rs"

[build-dependencies]
chrono = "0.4.41"

[dependencies]
chrono = { version = "0.4.41" }
# XML parsing — zero-copy, safe
roxmltree = "0.20"
# CLI argument parsing
clap = { version = "4", features = ["derive"] }
# Gzip for .svgz
flate2 = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
